notes/certifications/ckad/services/ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2023-08-16T15:19:37Z"
  generation: 2
  name: ingress-wear-watch
  namespace: app-space
  resourceVersion: "1512"
  uid: d5f455e2-b549-4ed8-9882-206668fc6059
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: wear-service
                port:
                  number: 8080
            path: /wear
            pathType: Prefix
          - backend:
              service:
                name: video-service
                port:
                  number: 8080
            path: /stream
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - ip: 10.105.27.195
